# fan-watch

./: .gitignore  README.rst  pyproject.toml
fan_watch/: app.py
tests/: test_fan_watch.py
