[tool.poetry]
name = "fan-watch"
version = "0.1.0"
description = ""
authors = ["scullionw <williamscullion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pythonnet = "^2.4.0"
win10toast = "^0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
